添加JVM调优模块